--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
     text-align: center;
     padding: 5rem 2rem;
     background: url('https://source.unsplash.com/1600x600/?cafe') center/cover no-repeat;
-    color: white;
+    color: black ;
   }
   
   /* Menu Section */
